# RoPet_ESPS3_AI_EYE

./: .gitignore  README.md  partitions_4M.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.defaults.mem_opt.esp32c2
components/78__esp-opus-encoder/: opus_decoder.cc  opus_encoder.cc
components/78__esp-opus-encoder/include/: opus_decoder.h  opus_encoder.h
components/doit_csi/: CMakeLists.txt  doit_csi.c  doit_csi.h  doit_csi_c.txt  doit_csi_h.txt  doit_csi_one_change_c.txt  idf_component.yml
components/frame_parser/: CMakeLists.txt  frame_parser.c  frame_parser.h
components/rbuffer/: CMakeLists.txt
components/vb6824/: CMakeLists.txt  Kconfig  vb6824.c  vb6824.h  vb_ota.h
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  application.txt  application_h.txt  idf_component.yml  main.cc
main/assets/zh_vb6824/: 0.p3  1.p3  2.p3  3.p3  4.p3  5.p3  6.p3  7.p3  8.p3  9.p3  activation.p3  err_pin.p3  err_reg.p3  upgrade.p3  welcome.p3  wificonfig.p3
main/audio_codecs/: audio_codec.cc  audio_codec.h  vb6824_audio_codec.cc  vb6824_audio_codec.h
main/boards/Awaken_aiboard/: Awaken_aiboard.cc  config.h  config.json
main/boards/common/: board.cc  board.h  button.cc  (+4 more)
main/csi/: csi_controller.cc  csi_controller.h  csi_controller_c.txt  csi_controller_h.txt
main/display/: lcd_display.cc  lcd_display.h
main/led/: single_led.cc  single_led.h
main/opus_codecs/: no_opus_codec.cc  no_opus_codec.h  only_dec_opus_code.cc  only_dec_opus_code.h  opus_codec.cc  opus_codec.h
(+24 files in other folders)
